tests/fixtures/errors/invalid_virtual_endpoint_combination.puml
@startuml
[ -> ]: virtual-to-virtual-plain
@enduml
